# scouting-agenda

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DOCKER.md  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  run_server.py  secrets.yaml.example  setup.sh  sync.py
.github/workflows/: docker-build.yml  lint.yml
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md  SECRETS.md
scouting_agenda/: __init__.py  server.py  settings.py  sync.py  sync_calendars.py
scouting_agenda/api/: calendars.py  events.py  health.py  sync.py
scouting_agenda/static/: embed.css  embed.js
scouting_agenda/templates/: embed.html
scouting_agenda/utils/: calendar.py  file.py  ics.py  merge.py  visibility.py  yaml.py
