[project]
name = "scouting-agenda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "icalendar>=6.3.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.40.0",
    "jinja2>=3.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scouting_agenda"]

[tool.setuptools.package-data]
scouting_agenda = ["static/*", "templates/*"]

[project.scripts]
sync = "scouting_agenda.sync_calendars:main"
server = "scouting_agenda.server:run_server"

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
# Python version
target-version = "py312"

# Line length
line-length = 100

# Include/exclude patterns
extend-exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
    "output",
]

[tool.ruff.lint]
# Enable rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
# isort settings
known-first-party = ["scouting_agenda"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Format docstrings
docstring-code-format = true

[dependency-groups]
dev = [
    "ty>=0.0.11",
]
